--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                 <h3>Digital Design</h3>
 
-                <p class="article">
+                <p class="p2">
 
                     Some quick example text to build on the card title and make up the bulk of the card the platform
 
@@ -134,7 +134,7 @@
 
                 <h3>Unlimited Colors</h3>
 
-                <p class="article">
+                <p class="p2">
 
                     Credibly brand stonaads compliant user exteible services College Anibh icean euismod tincidunt laoreet.
 
@@ -148,7 +148,7 @@
 
                 <h3>Strategy Solutions</h3>
                 
-                <p class="article">
+                <p class="p2">
 
                    Separated they live in Bookmarks Grove right at the coast of the Semantics, a large ocean regelialia.
 
@@ -188,9 +188,9 @@
 
         <div id ="team">
 
-            <p class="p1">We'r dynamic team of talented people of innovative & marketing expert</p>
+            <h4>We'r dynamic team of talented people of innovative & marketing expert<h4>
 
-            <p class="p1">
+            <p class="p4">
                To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. if several languages of
                the resulting language.
             </p>
@@ -201,40 +201,103 @@
 
         <div id="members">
 
-            <div>
+            <div class ="profilMember">
 
                 <b>1499+</b>
-                <p class ="p2">Complète projects</p>
 
-            <img class ="photo" src = "img/person1.png">
+                <p class ="p4b">Complète projects</p>
+
+                <figure class = "zoom">                  
+
+                <img class ="photo" src = "img/person1.png">
+
+                </figure>
+
+                <b>Anna g. Wilhite</b>
+
+                <p class ="p4b">CEO/Founder</p>
 
             </div>
 
-            <div>
+            <div class ="profilMember">
 
                 <b>1080K</b>
-                <p class ="p2">Satisfied Clients</p>
+
+                <p class ="p4b">Satisfied Clients</p>
+
+                <figure class = "zoom">  
+
                 <img class ="photo" src = "img/person2.png">
 
+                </figure>
+
+                <b>William S. Blay</b>
+
+                <p class ="p4b">CTO/Co-Founder</p>
+
             </div>
 
-            <div>
+            <div class ="profilMember">
 
                 <b>608</b>
-                <p class ="p2">Team Members</p>
+
+                <p class ="p4b">Team Members</p>
+
+                <figure class = "zoom"> 
+
                 <img class ="photo" src = "img/person3.png">
+
+                </figure>
+
+                <b>Maria B. Morales</b>
+
+                <p class ="p4b">Web Designer</p>
 
             </div>
 
-            <div>
+            <div class ="profilMember">
 
                 <b>252</b>
-                <p class ="p2">Employee</p>
+
+                <p class ="p4b">Employee</p>
+
+                <figure class = "zoom"> 
+
                 <img class ="photo" src = "img/person4.png">
+
+                </figure>
+
+                <b>Luke L. Johnston</b>
+
+                <p class ="p4b">Web Developper</p>
 
             </div>
 
         </div>
+
+    </section>
+
+
+
+    <!-- ----------- SECTION 5    GET STARTED  -->
+
+
+    <section id ="section5">
+
+        <div id ="start">
+
+            <p class="p5">Let's get started with kucra</p>
+
+            <p class="p5b">
+               They are a good way to get you started if you want to build something 
+               similar or use from existing apps which will reduce the cost, effots and time
+                of the developpers.
+            </p>
+
+            <input id ="btn2" type="button" value ="GET STARTED"></input>
+
+        </div>        
+
 
     </section>
 
