--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <!-- / Google fonts -->
 
     <!-- Font Awesome - icons brands -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -59,19 +62,20 @@
 
             <!-- logo facebook, twitter, instagram -->
 
-            <div id="socialmedia">
+            <div>
 
-                <a class="logomedia" href="https://www.google.fr" target="_blank">
+                <a href="https://www.google.fr" target="_blank">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a class="logomedia" href="https://www.google.fr" target="_blank">                    
-                    <i id="twitter" class="fa-brands fa-twitter"></i>
+                <a href="https://www.google.fr" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a class="logomedia" href="https://www.google.fr" target="_blank">
-                    <i id="insta" class="fa-brands fa-instagram"></i>
+                <a href="https://www.google.fr" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
 
             </div>
+
 
         </header>
 
@@ -100,9 +104,9 @@
 
                 </div>
 
-                <!-- Insertion du logo avec le chat sur l'écran -->                
+                <!-- Insertion du logo avec le chat sur l'écran -->
 
-                <img id="cat" src="illustration.svg">                
+                <img id="cat" src="illustration.svg">
 
             </section>
 
@@ -125,7 +129,7 @@
 
         </header>
 
-        <main id="productsView">
+        <div id="productsView">
 
             <div class="product">
 
@@ -163,7 +167,8 @@
             <div class="product">
 
                 <figure>
-                    <img class="logoProduct" src="https://img.icons8.com/external-smashingstocks-glyph-smashing-stocks/50/FFFFFF/external-chess-pieces-games-smashingstocks-glyph-smashing-stocks.png">
+                    <img class="logoProduct"
+                        src="https://img.icons8.com/external-smashingstocks-glyph-smashing-stocks/50/FFFFFF/external-chess-pieces-games-smashingstocks-glyph-smashing-stocks.png">
                 </figure>
 
                 <h2>Strategy Solutions</h2>
@@ -175,7 +180,7 @@
 
             </div>
 
-        </main>
+        </div>
 
 
 
@@ -305,13 +310,13 @@
 
     <section id="section5">
 
-        <div  id="start">
+        <div id="start">
 
-        <header>
+            <header>
 
-            <h1 class="text_sec5">Let's get started with kucra</h1>
+                <h1 class="text_sec5">Let's get started with kucra</h1>
 
-        </header>
+            </header>
 
             <p class="text_sec5">
                 They are a good way to get you started if you want to build something
@@ -334,13 +339,12 @@
 
         <header>
 
-        <h1>What your client says</h1>
+            <h1>What your client says</h1>
 
         </header>
 
         <p>The big oxmox advised her not to doso, because there were thousands of
             bad Commas, wild Question Marks and devious pulvinar metus malestie sed Semikoli.
-
         </p>
 
         <div id="logo_clients">
@@ -355,9 +359,176 @@
 
     </section>
 
-    </main>
+    <!-- ----------SECTION 7  wE ARE DIGITAL LANDING PAGE ----------------------------- -->
 
-    <script src="script.js"></script>
+    <section id="section7">
+
+        <div id="div_sec7">
+
+            <h1> We are digital creative Landing Page</h1>
+
+            <p>
+                The difference between a successful person and others is not a lock of stength, not a lack of knowledge,
+                but rather a lack of will. Composed in a pseudo-latin language more or less pseudo latin language
+                corresponds.
+            </p>
+
+            <div id="score">
+
+                <div class="scoreChiffres">
+                    <b>4957</b>
+                    <p>Happy User</p>
+                </div>
+
+                <div class="scoreChiffres">
+                    <b>1599</b>
+                    <p>Complete Project</p>
+                </div>
+
+            </div>
+
+            <button id="learnmoreBtn"> Learn More </button>
+
+        </div>
+
+        <img id="creativity" src="img/creativity.png">
+
+    </section>
+
+    <!------------------- SECTION 8 PRICING ----------------- -->
+
+    <section id="section8">
+
+        <header class="titleProducts">
+
+            <h1>Our Pricing</h1>
+
+            <p>
+                It is a long established fact that a reader will be of a page when established fact looking at its
+                layout
+            </p>
+
+
+        </header>
+
+        <div id="productsView">
+
+            <div class="price">
+
+                <h3>Starter</h3>
+
+                <p>
+                    <span>$9</span>/month
+                </p>
+
+                <div class="featuresPerPack">
+
+                    <div>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Bandwidth</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Onlinespace</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/offices/30/null/cancel-2.png" />
+                            Support:No</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" /> Domain
+                        </p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/offices/30/null/cancel-2.png" /> Hidden
+                            Fees</p>
+                    </div>
+
+                    <div class="rightColumn">
+                        <p>1GB</p>
+                        <p>500MB</p>
+                        <p>No</p>
+                        <p>1</p>
+                        <p>No</p>
+                    </div>
+
+                </div>
+
+                <button class="joinNowBtn"> Learn More </button>
+
+            </div>
+
+            <div class="sale">
+
+                <h3>Advanced</h3>
+
+                <p>
+                    <span>$19</span>/month
+                </p>
+
+                <div class="featuresPerPack">
+
+                    <div>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Bandwidth</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Onlinespace</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Support:No</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" /> Domain
+                        </p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" /> Hidden
+                            Fees</p>
+                    </div>
+
+                    <div class="rightColumn">
+                        <p>2GB</p>
+                        <p>1GB</p>
+                        <p>Yes</p>
+                        <p>3</p>
+                        <p>No</p>
+                    </div>
+
+                </div>
+
+                <button class="joinNowBtn"> Learn More </button>
+
+            </div>
+
+            <div class="price">
+
+                <h3>Professionnal</h3>
+
+                <p>
+                    <span>$29</span>/month
+                </p>
+
+                <div class="featuresPerPack">
+
+                    <div>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Bandwidth</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Onlinespace</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" />
+                            Support:No</p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" /> Domain
+                        </p>
+                        <p class="leftColumn"> <img src="https://img.icons8.com/color/30/null/checked--v1.png" /> Hidden
+                            Fees</p>
+                    </div>
+
+                    <div class="rightColumn">
+                        <p>3GB</p>
+                        <p>2GB</p>
+                        <p>Yes</p>
+                        <p>Unlimited</p>
+                        <p>No</p>
+                    </div>
+
+                </div>
+
+                <button class="joinNowBtn"> Learn More </button>
+
+            </div>
+
+        </div>
+
+        </div>
+
+    </section>
 
 </body>
 
