--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <div id="logo">
 
-                <img id="frog" src="img/frognew.png">
+                <img id="frog" src="img/frognew.png" onmouseover="changeLogo()" onmouseout="resetLogo()">
 
             </div>
 
@@ -529,6 +529,8 @@
         </div>
 
     </section>
+
+    <script src="script.js"></script>
 
 </body>
 
