add sections and scroll to top

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <div>
 
                 <a href="https://www.google.fr" target="_blank">
-                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-facebook logo-header"></i>
                 </a>
                 <a href="https://www.google.fr" target="_blank">
-                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-twitter logo-header"></i>
                 </a>
                 <a href="https://www.google.fr" target="_blank">
-                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-instagram logo-header"></i>
                 </a>
 
             </div>
@@ -418,7 +418,7 @@
                 <h3>Starter</h3>
 
                 <p>
-                    <span>$9</span>/month
+                    <span class="span-sec8">$9</span>/month
                 </p>
 
                 <div class="featuresPerPack">
@@ -455,7 +455,7 @@
                 <h3>Advanced</h3>
 
                 <p>
-                    <span>$19</span>/month
+                    <span class="span-sec8">$19</span>/month
                 </p>
 
                 <div class="featuresPerPack">
@@ -492,7 +492,7 @@
                 <h3>Professionnal</h3>
 
                 <p>
-                    <span>$29</span>/month
+                    <span class="span-sec8">$29</span>/month
                 </p>
 
                 <div class="featuresPerPack">
@@ -529,6 +529,97 @@
         </div>
 
     </section>
+
+     <!-- ----------- SECTION 9 : OUR BLOGS ------------------- -->
+
+     <section id="section9">
+
+        <header class="titleProducts">
+
+            <h1>Our Blog</h1>
+
+            <p>
+                It is a long established fact that a reader will be of a page when established fact looking at its
+                layout
+            </p>
+
+        </header>
+
+        <main class="main-sec9">
+
+            <div class="blog">
+
+                <img class ="img-sec9" src="img/blog1.png">
+                <h3>Doing a cross country road trip</h3>
+                <p class="p-sec9">We craft digital, graphic and dimensional thinking to create category leading brand</p>
+                <a href="www.google.com">Read More</a>
+
+            </div>
+
+            <div class="blog">
+
+                <img class ="img-sec9" src="img/blog2.png">
+                <h3>New Exhibition at our Museum</h3>
+                <p class="p-sec9">Even the all-powerful Pointing has no control about the blind almost unorthographic</p>
+                <a href="www.google.com">Read More</a>
+
+            </div>
+
+            <div class="blog">
+
+                <img class ="img-sec9" src="img/blog3.png">
+                <h3>Design your apps in your own way</h3>
+
+                <p class="p-sec9">Pityful a tehoric question ran over her cheek then she continued her way.</p>
+                
+                <a href="www.google.com">Read More</a>
+
+            </div>
+
+        </main>
+
+    </section>
+
+    <!-- ----------- FOOTER ------------------- -->
+
+    <footer>
+
+        <div id = "logos-footer">
+
+            <div class ="border-footer">
+            <img src="img/facebook.svg" class="logo-footer">
+            </div>
+
+            <div class ="border-footer">
+            <img src="img/twitter.svg" class="logo-footer">
+            </div>
+
+            <div class ="border-footer">
+            <img src="img/linkedin.svg" class="logo-footer">
+            </div>
+
+            <div class ="border-footer">
+            <img src="img/google.svg" class="logo-footer">
+            </div>
+
+        </div>
+
+        <div>
+            <a href="www.google.com">Terms & Condition</a>
+            <span class="span-footer">|</span>
+            <a href="www.google.com">Privacy Policy</a>
+            <span class="span-footer">|</span>
+            <a href="www.google.com">Contact Us</a>
+        </div>
+
+        <div>
+            2022 © Kucra - Landing Page Template by Pichforest
+        </div>
+
+    </footer>
+
+    <a href="#" class="top"><img id="top-img" src="img/up.svg"></a>
+
 
     <script src="script.js"></script>
 
