responsive in progress

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <!-- logo facebook, twitter, instagram -->
 
-            <div>
+            <div class="logos-header">
                 <a href="https://www.google.fr" target="_blank">
                     <i class="fa-brands fa-facebook logo-header"></i>
                 </a>
