add Mobile responsive

--- a/index.html
+++ b/index.html
@@ -350,7 +350,6 @@
     </section>
 
 
-
     <!-- ----------- SECTION 5    GET STARTED --------------------- -->
 
 
@@ -637,11 +636,11 @@
                     
                 </div>
 
-                <h3>Design your apps in your own way</h3>
+                <h3 class="p-sec9">Design your apps in your own way</h3>
 
                 <p class="p-sec9">Pityful a tehoric question ran over her cheek then she continued her way.</p>
                 
-                <a href="www.google.com">Read More</a>
+                <a class="p-sec9" href="www.google.com">Read More</a>
 
             </div>
 
