--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
         <div id="div_sec7">
 
-            <h1> We are digital creative Landing Page</h1>
+            <h2> We are digital creative Landing Page</h2>
 
             <p>
                 The difference between a successful person and others is not a lock of stength, not a lack of knowledge,
@@ -420,12 +420,12 @@
 
                 <div class="scoreChiffres">
                     <b>4957</b>
-                    <p>Happy User</p>
+                    <p class = "p-sec7">Happy User</p>
                 </div>
 
                 <div class="scoreChiffres">
                     <b>1599</b>
-                    <p>Complete Project</p>
+                    <p class = "p-sec7">Complete Project</p>
                 </div>
 
             </div>
