--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
         <div id="sideNav" class="sideNav">
 
-            <a id="closeBtn" href="#" class="close">X</a>
+            <a id="closeBtn" class="close">X</a>
+            
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#section2">FEATURES</a></li>
@@ -84,7 +85,7 @@
             </ul>
         </div>
     
-        <a href="#" id="openSide">
+        <a href="#" id="openBtn">
             <img src="img/burger.png"/>
         </a>  
 
